CHANGED PACKED ID

--- a/Muse/Muse.csproj
+++ b/Muse/Muse.csproj
@@ -11,6 +11,9 @@
     <PackageLicenseUrl>https://github.com/LuukEbenau/Muse/blob/master/LICENSE</PackageLicenseUrl>
     <PackageIconUrl>https://images.indiegogo.com/file_attachments/531318/files/20140424121937-muse_interaXon_logo.jpg</PackageIconUrl>
     <Version>1.0.1</Version>
+    <PackageReleaseNotes />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>SacaDev.Muse</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
