renamed namespace from Muse to SacaDev.Muse

--- a/Muse.Cli/SacaDev.Muse.Cli.csproj
+++ b/Muse.Cli/SacaDev.Muse.Cli.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Muse\Muse.csproj" />
+    <ProjectReference Include="..\Muse\SacaDev.Muse.csproj" />
   </ItemGroup>
 
 </Project>
