changed folder structure to match project names, so SacaDev. prefix

--- a/SacaDev.Muse.Cli/SacaDev.Muse.Cli.csproj
+++ b/SacaDev.Muse.Cli/SacaDev.Muse.Cli.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Muse\SacaDev.Muse.csproj" />
+    <ProjectReference Include="..\SacaDev.Muse\SacaDev.Muse.csproj" />
   </ItemGroup>
 
 </Project>
