--- a/OscParser/OscParser.csproj
+++ b/OscParser/OscParser.csproj
@@ -2,8 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.4</Version>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Version>1.0.5.1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl>LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/LuukEbenau/SacaDev.Muse</PackageProjectUrl>
+    <Copyright>GNU General Public License v3.0</Copyright>
+    <Description>OSC package parser library</Description>
+    <RepositoryUrl>https://github.com/LuukEbenau/SacaDev.Muse</RepositoryUrl>
+    <RepositoryType>Public</RepositoryType>
+    <PackageTags>OSC Muse Parser SacaDev</PackageTags>
   </PropertyGroup>
 
 </Project>
