--- a/SacaDev.Muse.Test/SacaDev.Muse.Test.csproj
+++ b/SacaDev.Muse.Test/SacaDev.Muse.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Muse\SacaDev.Muse.csproj" />
+    <ProjectReference Include="..\SacaDev.Muse\SacaDev.Muse.csproj" />
   </ItemGroup>
 
 </Project>
