--- a/SacaDev.Muse/SacaDev.Muse.csproj
+++ b/SacaDev.Muse/SacaDev.Muse.csproj
@@ -3,14 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>This package is designed to be a easy to use library to communicate with the Muse Headband (see  https://choosemuse.com/).</Description>
-    <PackageTags>Muse ChooseMuse EEG headband interaXon Muse</PackageTags>
+    <PackageTags>Muse ChooseMuse EEG headband interaXon Muse SacaDev</PackageTags>
     <PackageProjectUrl>https://github.com/LuukEbenau/SacaDev.Muse</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/LuukEbenau</RepositoryUrl>
-    <RepositoryType>Public</RepositoryType>
+    <RepositoryUrl>https://github.com/LuukEbenau/SacaDev.Muse</RepositoryUrl>
+    <RepositoryType>Public Open Source</RepositoryType>
     <Copyright>GNU General Public License v3.0</Copyright>
     <PackageLicenseUrl>LICENSE</PackageLicenseUrl>
+    <license>LICENSE</license>
     <PackageIconUrl>https://images.indiegogo.com/file_attachments/531318/files/20140424121937-muse_interaXon_logo.jpg</PackageIconUrl>
-    <Version>1.0.5.1</Version>
+    <Version>1.0.5.3</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>SacaDev.Muse</PackageId>
